<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usv_controller</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="muhayyuddin_1@hotmail.com">muhayy</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>usv_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>tf2_ros</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
